# display_tty

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  README.md  asciiart.txt  disp-1.0.0-py3-none-any.whl  display_tty.code-workspace  pyproject.toml  requirements.build.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: document_generator.yaml  publish_locally.yaml  publish_localy.yaml  publish_packages.yaml  python-package.yml  run_unit_tests.yaml
disp/: __init__.py  constants.py  disp.py  my_disp.py
display_tty/: __init__.py  __main__.py  my_disp.py
display_tty/src/: __init__.py  aliases.py  colours.py  constants.py  initialiser.py  instances.py  log_level_tracker.py  my_disp.py
doxygen_generation/: Dockerfile  Doxyfile  make_documentation.sh
doxygen_generation/favicon/: favicon-16x16.xcf  favicon-32x32.xcf  favicon.xcf
doxygen_generation/favicon/old/: site.webmanifest
doxygen_generation/favicon/terminal_icon/dev/: terminal.xcf
doxygen_generation/html/: footer.html  header.html  header_include.html  launch_server.sh  serve_page.sh
doxygen_generation/html/files/icon/: index.html  site.webmanifest
doxygen_generation/latex/: latex_footer.tex  latex_header.tex
doxygen_generation/latex/stylesheet/: stylesheet.tex
doxygen_generation/local_dev/: docker-compose.yaml  dockerfile
doxygen_generation/man/: installer.sh
doxygen_generation/man/side_scripts/: man_styling_cheatsheet.md  manier.sh  python_charset_changer_for_file.py
doxygen_generation/rtf/stylesheet/: stylesheet.rtf
tests/: test_ask_question.py  test_colours.py  test_disp.py  test_initialisation_function.py  test_log_level_tracker.py  test_output_functions.py
