# 
# +==== BEGIN display_tty =================+
# LOGO: 
# ..@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
# .@...........................#@
# @############################.@
# @...........................@.@
# @..#######################..@.@
# @.#########################.@.@
# @.##>_#####################.@.@
# @.#########################.@.@
# @.#########################.@.@
# @.#########################.@.@
# @.#########################.@.@
# @..#######################..@.@
# @...........................@.@
# @..+----+______________.....@.@
# @..+....+______________+....@.@
# @..+----+...................@.@
# @...........................@.#
# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@#.
# /STOP
# PROJECT: display_tty
# FILE: pyproject.toml
# CREATION DATE: 06-11-2025
# LAST Modified: 13:49:22 06-11-2025
# DESCRIPTION: 
# A module that allows you to display text with a few boilers (i.e. put your text in a square for titles). It also allows to log to the terminal by wrapping around the logging library.
# /STOP
# COPYRIGHT: (c) Asperguide
# PURPOSE: File in charge of containing the required configuration to allow the python code to compile as a library.
# // AR
# +==== END display_tty =================+
# 

# pyproject.toml

[build-system]
requires = ["setuptools >= 80.9.0", "wheel >= 0.36.2", "pep517 >= 0.11.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
# Include the top-level package and any of its subpackages (display_tty.src, etc.)
include = ["display_tty", "display_tty.*"]
exclude = ["lenv", "menv", "wenv", "env", "venv", ".env", ".venv"]

[project]
name = "display_tty"
version = '1.0.0'
license = "MIT"
authors = [
    { name = "Henry Letellier", email = "henrysoftwarehouse@protonmail.com" },
]
maintainers = [
    { name = "Henry Letellier", email = "henrysoftwarehouse@protonmail.com" },
]
dependencies = ["colorlog ==6.10.1"]
description = "A module that allows you to display text with a few boilers (i.e. put your text in a square for titles). It also allows to log to the terminal by wrapping around the logging library."
license-files = ["LICENSE"]
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "logger",
    "terminal",
    "logging",
    "lightweight",
    "colour",
    "stdout",
    "stderr",
    "optimised",
    "wrapper",
    "pure python",
    "python",
]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Hanra-s-work/display_tty"
Documentation = "https://github.com/Hanra-s-work/display_tty/blob/main/README.md"
Repository = "https://github.com/Hanra-s-work/display_tty.git"
Issues = "https://github.com/Hanra-s-work/display_tty/issues"
